--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body bgcolor= #8fb9aa>
 	<h1>ESTE SITE ME RETRATA</h1>
-    <h2><b>1- Gosto de filmes</b></h2>
+    <h2>1- Gosto de filmes</h2>
         <h3> Gosto de filmes, mas nao me considero cinefilo. Me vejo mais como um intusiasta. 
             <br>Meu filme favorito no momento é Shiki-Jitsu do diretor Hideaki anno</h3>
                 <img src="shikijitsu.jpg" height="428" width="300">
